--- a/belatro-backend/test.html
+++ b/belatro-backend/test.html
@@ -2,10 +2,20 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Belot 4-Player Bot Cockpit</title>
+  <title>Belot 4-Player Cockpit</title>
   <style>
-    body { font-family: sans-serif; display: flex; flex-wrap: wrap; gap: 1rem; }
-    .player { border: 1px solid #ccc; padding: 0.5rem; width: 23%; }
+    body { font-family: sans-serif; margin: 1rem; }
+    #controls { margin-bottom: 1rem; }
+    #controls input { width: 300px; }
+    #controls button { margin-left: .5rem; }
+
+    .players { display: flex; flex-wrap: wrap; gap: 1rem; }
+    .player {
+      border: 1px solid #ccc;
+      padding: .5rem;
+      width: 23%;
+      box-sizing: border-box;
+    }
     .player h2 { margin: 0 0 .5rem; font-size: 1.1rem; }
     .section { margin-bottom: .5rem; }
     .cards button, .bids button { margin: 0 .2rem .2rem 0; }
@@ -14,103 +24,156 @@
 </head>
 <body>
 
-<!-- Control bar -->
-<div style="width:100%; margin-bottom:1rem;">
-  Game ID: <input id="gameId" value="PUT_YOUR_GAME_ID_HERE" style="width:200px">
+<div id="controls">
+  Match ID:
+  <input id="gameId" placeholder="(click “New Match & Connect” first)">
+  <button id="newMatch">New Match & Connect</button>
   <button id="connect">Connect All 4</button>
 </div>
 
-<!-- Four player panels -->
-<div class="player" id="Alice"><h2>Alice</h2>
-  <div class="section"><strong>Public:</strong><pre class="pub"></pre></div>
-  <div class="section"><strong>Hand:</strong><div class="cards"></div></div>
-  <div class="section"><strong>Bid:</strong><div class="bids"></div></div>
-</div>
-<div class="player" id="Bob"><h2>Bob</h2>
-  <div class="section"><strong>Public:</strong><pre class="pub"></pre></div>
-  <div class="section"><strong>Hand:</strong><div class="cards"></div></div>
-  <div class="section"><strong>Bid:</strong><div class="bids"></div></div>
-</div>
-<div class="player" id="Carol"><h2>Carol</h2>
-  <div class="section"><strong>Public:</strong><pre class="pub"></pre></div>
-  <div class="section"><strong>Hand:</strong><div class="cards"></div></div>
-  <div class="section"><strong>Bid:</strong><div class="bids"></div></div>
-</div>
-<div class="player" id="Dave"><h2>Dave</h2>
-  <div class="section"><strong>Public:</strong><pre class="pub"></pre></div>
-  <div class="section"><strong>Hand:</strong><div class="cards"></div></div>
-  <div class="section"><strong>Bid:</strong><div class="bids"></div></div>
+<div class="players">
+  <div class="player" id="Alice">
+    <h2>Alice</h2>
+    <div class="section"><strong>Public:</strong><pre class="pub"></pre></div>
+    <div class="section"><strong>Hand:</strong><div class="cards"></div></div>
+    <div class="section"><strong>Bid:</strong><div class="bids"></div></div>
+  </div>
+  <div class="player" id="Bob">
+    <h2>Bob</h2>
+    <div class="section"><strong>Public:</strong><pre class="pub"></pre></div>
+    <div class="section"><strong>Hand:</strong><div class="cards"></div></div>
+    <div class="section"><strong>Bid:</strong><div class="bids"></div></div>
+  </div>
+  <div class="player" id="Carol">
+    <h2>Carol</h2>
+    <div class="section"><strong>Public:</strong><pre class="pub"></pre></div>
+    <div class="section"><strong>Hand:</strong><div class="cards"></div></div>
+    <div class="section"><strong>Bid:</strong><div class="bids"></div></div>
+  </div>
+  <div class="player" id="Dave">
+    <h2>Dave</h2>
+    <div class="section"><strong>Public:</strong><pre class="pub"></pre></div>
+    <div class="section"><strong>Hand:</strong><div class="cards"></div></div>
+    <div class="section"><strong>Bid:</strong><div class="bids"></div></div>
+  </div>
 </div>
 
-<!-- dependencies -->
+<!-- SockJS and STOMP.js from CDN -->
 <script src="https://cdn.jsdelivr.net/npm/sockjs-client/dist/sockjs.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/stompjs/lib/stomp.min.js"></script>
 <script>
+  // ========== CONFIG ==========
   const PLAYERS = ['Alice','Bob','Carol','Dave'];
-  const TRUMP = 'HERC'; // hard-coded for example
+  const TRUMP   = 'HERC';
+  const teamA   = ['Alice','Carol'];
+  const teamB   = ['Bob','Dave'];
+  const originLobby = {}; // adjust to your API's lobby shape
 
-  document.getElementById('connect').onclick = () => {
+  // ========== MATCH CREATION ==========
+  async function createMatch() {
+    const res = await fetch('http://localhost:8080/matches', {
+      method: 'POST',
+      headers: {'Content-Type':'application/json'},
+      body: JSON.stringify({
+        teamA,
+        teamB,
+        originLobby,
+        gameMode: 'CASUAL'
+      })
+    });
+    if (!res.ok) throw new Error('Failed to create match: ' + res.status);
+    const match = await res.json();
+    return match.id;
+  }
+
+  // ========== CONNECT FOUR CLIENTS ==========
+  function connectAll() {
     const gameId = document.getElementById('gameId').value.trim();
-    if (!gameId) return alert('Enter game ID');
+    if (!gameId) return alert('Please enter or generate a Match ID first.');
 
     PLAYERS.forEach(name => {
       const panel = document.getElementById(name);
       const pubEl = panel.querySelector('.pub');
       const handEl = panel.querySelector('.cards');
-      const bidEl = panel.querySelector('.bids');
+      const bidEl  = panel.querySelector('.bids');
 
-      // clear UI
+      // clear previous UI
       pubEl.textContent = '';
       handEl.innerHTML = '';
       bidEl.innerHTML = '';
 
-      // stomp client
-      const client = Stomp.over(() => new SockJS(`http://localhost:8080/ws?user=${name}`));
-      client.debug = false;
-      client.connect({ login: name }, () => {
-        // subscribe public
+      // create STOMP client
+      const socket = new SockJS(`http://localhost:8080/ws?user=${name}`);
+      const client = Stomp.over(socket);
+      client.debug = () => {}; // silence logs
+
+      client.connect({}, frame => {
+        // 1) PUBLIC view
         client.subscribe(`/topic/games/${gameId}`, msg => {
           const view = JSON.parse(msg.body);
           pubEl.textContent = JSON.stringify(view, null,2);
         });
-        // subscribe private
+
+        // 2) PRIVATE hand
         client.subscribe(`/user/queue/games/${gameId}`, msg => {
           const pv = JSON.parse(msg.body);
-          // render hand buttons
           handEl.innerHTML = '';
           pv.hand.forEach(card => {
             const b = document.createElement('button');
             b.textContent = card;
             b.onclick = () => {
-              client.send(`/app/games/${gameId}/play`,
-                      {},
-                      JSON.stringify({ playerId: name, card, declareBela: false })
+              client.send(
+                      `/app/games/${gameId}/play`, {},
+                      JSON.stringify({
+                        playerId: name,
+                        card: card,
+                        declareBela: false
+                      })
               );
             };
             handEl.appendChild(b);
           });
         });
-        // render bid buttons
-        ['pass','call'].forEach(type => {
-          const b = document.createElement('button');
-          b.textContent = type==='pass'? 'Pass' : `Call ${TRUMP}`;
-          b.onclick = () => {
-            client.send(`/app/games/${gameId}/bid`, {},
-                    JSON.stringify({
-                      playerId: name,
-                      pass: type==='pass',
-                      trump: TRUMP
-                    })
-            );
-          };
-          bidEl.appendChild(b);
-        });
-      }, e => {
-        panel.querySelector('.pub').textContent = 'Connection error';
-        console.error(name, e);
+
+        // 3) BID buttons
+        bidEl.innerHTML = '';
+        const passBtn = document.createElement('button');
+        passBtn.textContent = 'Pass';
+        passBtn.onclick = () => {
+          client.send(
+                  `/app/games/${gameId}/bid`, {},
+                  JSON.stringify({ playerId: name, pass: true })
+          );
+        };
+        bidEl.appendChild(passBtn);
+
+        const callBtn = document.createElement('button');
+        callBtn.textContent = `Call ${TRUMP}`;
+        callBtn.onclick = () => {
+          client.send(
+                  `/app/games/${gameId}/bid`, {},
+                  JSON.stringify({ playerId: name, pass: false, trump: TRUMP })
+          );
+        };
+        bidEl.appendChild(callBtn);
+
+      }, err => {
+        pubEl.textContent = 'WS error: ' + err;
       });
     });
+  }
+
+  // ========== WIRING UP BUTTONS ==========
+  document.getElementById('newMatch').onclick = async () => {
+    try {
+      const id = await createMatch();
+      document.getElementById('gameId').value = id;
+      connectAll();
+    } catch (e) {
+      alert(e);
+    }
   };
+  document.getElementById('connect').onclick = connectAll;
 </script>
 </body>
 </html>
