Add lobby-based match retrieval and enhance match/trump handling
- Added `getMatchByLobbyId` API in `MatchController` and corresponding service/repository methods.
- Introduced `NotFoundException` for handling missing match scenarios.
- Improved trump-related handling in match processing, including better handling for "PASS" and trump/value assignments.
- Refactored hand/trick processing with clearer transitions and fixes for edge cases.
- Adjusted lobby creation to default the status to "WAITING."
- Updated UI logic for private lobby creation with password support.

--- a/belatro-backend/src/main/resources/static/index.html
+++ b/belatro-backend/src/main/resources/static/index.html
@@ -611,11 +611,19 @@
 
             const lobbyData = {
                 name: lobbyName,
-                isPrivate: isLobbyPrivate,
+                privateLobby:  privateLobbyCheckboxEl.checked,  // <-- correct name
+                password:      privateLobbyCheckboxEl.checked
+                    ? lobbyPasswordInputEl.value
+                    : null,
+
                 hostUser: {                   // Create the nested hostUser object
                     id: currentUser.id,
                     username: currentUser.username // Include username as UserSimpleDTO expects it
-                }
+                },
+                status: 'WAITING',
+
+
+
                 // Make sure hostId is being sent
                 // maxPlayers might be another field you need, defaulting or from input
             };
