--- a/belatro-backend/src/main/resources/static/index.html
+++ b/belatro-backend/src/main/resources/static/index.html
@@ -134,6 +134,8 @@
         <div class="section"><strong>Private (Hand & Turn):</strong><pre class="prv"></pre></div>
         <div class="section"><strong>Hand Actions:</strong><div class="cards"></div></div>
         <div class="section"><strong>Bidding Actions:</strong><div class="bids"></div></div>
+        <div class="section"><strong>Challenge:</strong><div class="challenge"></div></div>
+“
     </div>
     <div class="player" id="Bob">
         <h2>Bob</h2>
@@ -141,6 +143,8 @@
         <div class="section"><strong>Private (Hand & Turn):</strong><pre class="prv"></pre></div>
         <div class="section"><strong>Hand Actions:</strong><div class="cards"></div></div>
         <div class="section"><strong>Bidding Actions:</strong><div class="bids"></div></div>
+        <div class="section"><strong>Challenge:</strong><div class="challenge"></div></div>
+
     </div>
     <div class="player" id="Carol">
         <h2>Carol</h2>
@@ -148,6 +152,8 @@
         <div class="section"><strong>Private (Hand & Turn):</strong><pre class="prv"></pre></div>
         <div class="section"><strong>Hand Actions:</strong><div class="cards"></div></div>
         <div class="section"><strong>Bidding Actions:</strong><div class="bids"></div></div>
+        <div class="section"><strong>Challenge:</strong><div class="challenge"></div></div>
+
     </div>
     <div class="player" id="Dave">
         <h2>Dave</h2>
@@ -155,6 +161,8 @@
         <div class="section"><strong>Private (Hand & Turn):</strong><pre class="prv"></pre></div>
         <div class="section"><strong>Hand Actions:</strong><div class="cards"></div></div>
         <div class="section"><strong>Bidding Actions:</strong><div class="bids"></div></div>
+        <div class="section"><strong>Challenge:</strong><div class="challenge"></div></div>
+
     </div>
 </div>
 
@@ -908,7 +916,25 @@
         cardsDiv.innerHTML = '';
         bidsDiv.innerHTML  = '';
 
+        const challengeDiv = document.querySelector(`#${panelId} .challenge`);
+        if (challengeDiv) {
+            challengeDiv.innerHTML = ''; // clear old
 
+            const publicState   = privateState.publicPart;
+            const hasUsed       = publicState.challengeUsedByPlayer?.[backendUsername] ?? false;
+            const thisIsYou     = (displayName === USERNAME_TO_DISPLAY[backendUsername]);
+
+            if (thisIsYou) {                                  // YOUR OWN PANEL
+                const btn = document.createElement('button');
+                btn.textContent = hasUsed ? 'Challenge used' : 'Challenge hand';
+                btn.disabled    = hasUsed;
+                btn.onclick     = () =>
+                    sendPlayerAction(backendUsername, 'challenge', {}); // payload needs no extras
+                challengeDiv.appendChild(btn);
+            } else {                                          // OTHER PLAYERS
+                challengeDiv.textContent = hasUsed ? '✓ used' : '–';
+            }
+        }
 
         /* ---------- HAND ---------- */
         /* Always paint the cards … */
